--- a/tutorials/ingamecmds.mdx
+++ b/tutorials/ingamecmds.mdx
@@ -1,7 +1,7 @@
 ---
 title: "In-Game Commands"
 description: "Learn how to configure in-game commands properly, allowing you to easily manage your shift, log punishments, create BOLOs, message a group of people, and more."
-tag: "NEW"
+tag: "UPDATED"
 ---
 
 <Warning>
