--- a/modules/erlclogs.mdx
+++ b/modules/erlclogs.mdx
@@ -6,6 +6,10 @@ tag: "NEW"
 
 This page provides the essential configuration options for Ducky's **ERLC Server Logs** module, which allows you to monitor, track, and log all in-game activity within your ERLC private server. To enable and configure this module, use the **`/setup`** command and navigate to the **ERLC Server Logs** page.
 
+<Warning>
+You must [link your ERLC private server](/tutorials/linkerlc) to Ducky in order to use this module.
+</Warning>
+
 <Steps>
   <Step title="Player Join Logs" titleSize="h2">
     The **Player Join Logs** channel is where a log will be sent when a player joins the in-game server. The log includes the Roblox username, profile hyperlink, and timestamp.
