wip: automations.mdx; update tags

--- a/modules/automations.mdx
+++ b/modules/automations.mdx
@@ -1,18 +1,21 @@
 ---
 title: "Automations"
-description: "Learn how to automate your server with Ducky."
+description: "Learn how to automate your ERLC private server with Ducky."
 tag: "UNPOLISHED"
 ---
 
-Automations are a sequence of actions that happen once your **trigger** is met. This can be selected in the editor. To start creating automations, use the command `/automations create`
+Ducky's **Automations** are a powerful way to automate your ERLC private server. With over 30+ triggers, conditions, and actions, you can create custom events and commands such as staff requests, automatic session management, mass RDM detection, welcome messages, Discord checks, raid rollbacks, and *so much more*.
 
-<Danger>
-  Ducky has a 10 automation limit for free users, with 5 actions per automation. Upgrading to Ducky Plus+ will give you up to 50 automations and 15 actions per automation.
-</Danger>
-
+## Creating an Automation
 <Steps>
+  <Step title="Getting Started" titleSize="h2">
+    To create an automation, run the **`/automations create`** command. This will open up the **Automations Builder**, allowing you to customize your new automation using the **Edit this automation...** dropdown menu.
+  </Step>
   <Step title="Adding a Name" titleSize="h2">
-    The name is what your automation is called. This can be referenced if you wish to edit/delete your automation, or manually trigger it (If applicable).
+    To add an identifiable name to your automation, select the **Edit Name** option within the **Edit this automation...** dropdown menu.
+  </Step>
+  <Step title="Disabling Automations" titleSize="h2">
+    In the event that you would like to disable this automation without deleting it, you can do so by selecting the **Disable** option within the **Edit this automation...** dropdown menu.
   </Step>
   <Step title="Logic" titleSize="h2">
     The logic is what happens within your automation. This includes the trigger, conditions, and actions. We'll break down what each of them does and how to fully use it properly.
@@ -35,7 +38,7 @@ Automations are a sequence of actions that happen once your **trigger** is met. 
           Sending ER:LC Commands Requires Linked API.
         </Warning>
       </Step>
-    </Steps>
+    </Steps>-
   </Step>
 </Steps>
 
