--- a/configuration/permissions.mdx
+++ b/configuration/permissions.mdx
@@ -82,11 +82,12 @@ Ducky's role-based permissions can be configured via the first page of the **`/s
   - **`/shift manage`:** Members of the configured **ERLC Manager** permission roles are authorized to manage their own and other staff members shifts.
   - **`/loa view`:** Members of the configured **ERLC Manager** permission roles are authorized to view and manage their own and other staff members Leave of Absences.
   - **`/infraction issue`:** Members of the configured **ERLC Manager** permission roles are authorized to issue infractions.
-  - **`/infraction list`:** Members of the configured **ERLC Manager** permission roles are authorized to view all infractions listed on a user.
+  - **`/infraction list`:** Members of the configured **ERLC Manager** permission roles are authorized to view all infractions a user has received.
   - **`/infraction revoke`:** Members of the configured **ERLC Manager** permission roles are authorized to revoke an infraction issued towards a user.
-  - **`/promote`:** Members of the configured **ERLC Manager** permission roles are authorized to promote a user.
-  - **`/activity report`:** Members of the configured **ERLC Manager** permission roles are authorized to view the generated staff activity report.
-  - **`/activity generate`:** Members of the configured **ERLC Manager** permission roles are authorized to generate a staff activity report.
+  - **`/promotion issue`:** Members of the configured **ERLC Manager** permission roles are authorized to issue a promotion to a user.
+  - **`/promotion list`:** Members of the configured **ERLC Manager** permission roles are authorized to view all promotions a user has received.
+  - **`/shift wave merge`:** Members of the configured **ERLC Manager** permission roles are authorized to merge two shift waves.
+  - **`/shift wave end`:** Members of the configured **ERLC Manager** permission roles are authorized to end the active shift wave.
   - **`/feedback delete`:** Members of the configured **ERLC Manager** permission roles are authorized to delete submitted server feedback.
 </Accordion>
 
