--- a/configuration/permissions.mdx
+++ b/configuration/permissions.mdx
@@ -79,7 +79,7 @@ Ducky's role-based permissions can be configured via the first page of the **`/s
 </Accordion>
 
 <Accordion title="ERLC Manager Roles" icon="gear">
-  - **`/shift manage`:** Members of the configured **ERLC Manager** permission roles are authorized to manage their own and other staff members shifts.
+  - **`/shift admin`:** Members of the configured **ERLC Manager** permission roles are authorized to manage their own and other staff members shifts.
   - **`/loa view`:** Members of the configured **ERLC Manager** permission roles are authorized to view and manage their own and other staff members Leave of Absences.
   - **`/infraction issue`:** Members of the configured **ERLC Manager** permission roles are authorized to issue infractions.
   - **`/infraction list`:** Members of the configured **ERLC Manager** permission roles are authorized to view all infractions a user has received.
