--- a/configuration/permissions.mdx
+++ b/configuration/permissions.mdx
@@ -69,7 +69,7 @@ Ducky's role-based permissions can be configured via the first page of the **`/s
 
 <Accordion title="ERLC Administrator Roles" icon="Shield">
   - **`/bolo pending`:** Members of the configured **ERLC Administrator** permission roles are authorized to view and manage pending ban bolos.
-  - **`/search`:** Members of the configured **ERLC Administrator** permission roles are authorized to edit and delete punishments on a user.
+  - **`/punishments view`:** Members of the configured **ERLC Administrator** permission roles are authorized to edit and delete punishments on a user.
   - **`/erlc tempban`:** Members of the configured **ERLC Administrator** permission roles are authorized to temporarily ban a player.
   - **`/erlc untempban`:**  Members of the configured **ERLC Administrator** permission roles are authorized to remove a temporary ban on a player.
 
@@ -107,9 +107,9 @@ Ducky's role-based permissions can be configured via the first page of the **`/s
 
   - **`/updatemembers`:** Members with the **Manage Server** permission are authorized to update all members to your configuration, including verification and join roles.
   - **`/giveaway create`:** Members with the **Manage Server** permission are authorized to create a giveaway.
-  - **`/embed`:** Members with the **Manage Server** permission are authorized to open the Embed Editor and create an embed.
+  - **`/message`:** Members with the **Manage Server** permission are authorized to open the Message Editor and create/send a custom message including content & embeds.
   - **`/emoji clone`:** Members with the **Manage Server** permission are authorized to clone an emoji.
-  - **`/emoiji view`:** Members with the **Manage Server** permission are authorized to view information about an emoji.
+  - **`/emoji view`:** Members with the **Manage Server** permission are authorized to view information about an emoji.
   - **`/setup`:** Members with the **Manage Server** permission are authorized to setup/configure Ducky in the server.
   - **`/prefix`:** Members with the **Manage Server** permission are authorized to view and edit the current server prefix for Ducky.
   - **`/automations create`:** Members with the **Manage Server** permission are authorized to create an automation.
