--- a/misc/embededitor.mdx
+++ b/misc/embededitor.mdx
@@ -1,10 +1,9 @@
 ---
 title: "Embed Editor"
 description: "Learn how to create embeds using the Embed Editor."
-tag: "NEW"
 ---
 
-3The **Embed Editor** is found throughout many of Ducky's customizable options. It allows you to fully customize embeds, including their title, description, author, footer, fields, color, thumbnail, and image.
+The **Embed Editor** is found throughout many of Ducky's customizable options. It allows you to fully customize embeds, including their title, description, author, footer, fields, color, thumbnail, and image.
 
 ## Singular Embed Editor
 
@@ -30,14 +29,20 @@ The **Import** and **Export** options on the **Embed Editor** allow you to share
 Pressing the **Export** button will generate a 31-character code of random combinations of letters and numbers. This code can be shared with other users, who can then use the **Import** option and paste in the code.
 
 <Note>
-  The **Embed Editor** only accepts exportables of the **Embed** type. You can view an exportable's type via the **`/exportables view`** command.
+  The **Embed Editor** only accepts exportables of the **Embed**, **Embeds**, or **Message** type. You can view an exportable's type via the **`/exportables view`** command.
 </Note>
 
 ### History Control
 
 The **Undo** and **Redo** buttons on the **Embed Editor** allow you to easily undo/redo your changes in the event that you accidentally overwrite a large portion of your embed.
 
-History steps are automatically saved with each edit and can be returned to at any time.
+<Note>
+  History steps are automatically saved with each edit and can be returned to at any time.
+</Note>
+
+<Warning>
+  Using **Undo** then making an edit will clear the redo history.
+</Warning>
 
 ### Variables
 
@@ -53,7 +58,13 @@ The **Add/Edit/Remove Embed** options on the **Multi Embed Editor** allow you to
 
 The **Undo** and **Redo** buttons on the **Multi Embed Editor** allow you to easily undo/redo your changes in the event that you accidentally overwrite a large portion of your multiembed group.
 
-History steps are automatically saved with each edit and can be returned to at any time.
+<Note>
+  History steps are automatically saved with each edit and can be returned to at any time.
+</Note>
+
+<Warning>
+  Using **Undo** then making an edit will clear the redo history.
+</Warning>
 
 ### Variables
 
