--- a/modules/activity.mdx
+++ b/modules/activity.mdx
@@ -1,34 +1,34 @@
 ---
 title: "Activity Management"
 description: "Learn about Ducky's Activity Management module and how to configure it."
-tag: "NEW"
 ---
 
 This page provides the essential configuration options for Ducky's **Activity Management** module, which provides an easy way to manage and track your staff's activity with LOAs and activity waves. To enable and configure this module, use the **`/setup`** command and navigate to the **Activity Management** page.
 
 ## LOAs Enabled
 
-Enabling this option will allow your staff members to request a **Leave of Absence** via the `/loa request` command.
+The **LOAs Enabled** toggle determines whether or not staff members are able to request an LOA (Leave of Absence) via the **`/loa request`** command.
 
 ## LOA Logs Channel
 
-The **LOA Logs Channel** is where all LOA requests and logs will be sent. Any user with access to this channel can accept or deny LOA requests.
+The **LOA Logs Channel** is where all LOA requests and logs will be sent.
+
+<Warning>
+    Any member with access to this channel is able to approve or deny LOA requests.
+</Warning>
 
 ## LOA Role
 
-The **LOA Role** is assigned to staff members with an active LOA.
+The **LOA Role** is automatically assigned to staff members with an active LOA.
 
 ## LOA Nickname
 
-The **LOA Nickname** is assigned to staff members with an active LOA.
+The **LOA Nickname** is automatically assigned to staff members with an active LOA. The **`{member.name}`** and **`{member.username}`** variables can be used here.
 
-You may use these variables within the **LOA Nickname**:
+## Max LOA Length
 
-- **`{member.name}:`** The name of the member on LOA.
-- **`{member.username}:`** The username of the member on LOA.
+The **Max LOA Length** is the maximum length of time a staff member can request an LOA for.
 
-## Activity Report Interval
+## Track Modcalls
 
-The **Activity Report Interval** is the interval where **Activity Reports** are generated, which is the point where Ducky creates a snapshot of all staff member's total shift time and statistics.
-
-You can view Activity Reports via the **`/activity report`** command.
+The **Track Modcalls** toggle determines whether or not Ducky will track in-game modcalls. This feature must be enabled for modcall statistics to be available via the **`/modstats view`** command.
