--- a/modules/discordmod.mdx
+++ b/modules/discordmod.mdx
@@ -7,19 +7,8 @@ This page provides the essential configuration options for Ducky's **Discord Mod
 
 ## Modlogs Channel
 
-The **Modlogs Channel** is where all moderation actions and log messages will be sent. Logged moderation actions include:
-
-- Warning a member
-- Muting a member
-- Unmuting a member
-- Kicking a member
-- Banning & Unbanning a member
-- Purging messages
-- Locking & Unlocking a channel
-- Editing & Voiding a case
+The **Modlogs Channel** is where all moderation actions and log messages will be sent. This includes warning, muting, unmuting, kicking, banning, or unbanning a member, along with purging, locking, and unlocking a channel. This also includes logs for editing or voiding a case.
 
 ## Appeal Links
 
-The **Appeal Link** is an optional URL included in the DM sent to a user when they are moderated.
-
-This should direct the user to your **appeal system**, such as an [**appeal.gg**](https://appeal.gg/) link, a **Google Form**, or a **Discord Server**.
+The **Appeal Link** is an optional URL included in the DM sent to a user when they are moderated. This should direct the user to your **appeal system**, such as an [**appeal.gg**](https://appeal.gg/) link, a **Google Form**, or a **Discord Server**.
