--- a/modules/welcome.mdx
+++ b/modules/welcome.mdx
@@ -1,19 +1,32 @@
 ---
 title: "Welcome/AutoRoles"
 description: "Learn about Ducky's Welcome/AutoRoles module and how to configure it."
-tag: "NEW"
 ---
 
 This page provides the essential configuration options for Ducky's **Welcome/AutoRoles** module, which allows you to greet new members and automatically assign roles. To enable and configure this module, use the **`/setup`** command and navigate to the **Welcome/AutoRoles** page.
 
-## AutoRoles
+## Autoroles
 
-**AutoRoles** are automatically assigned to a user when they join the Discord server.
+**Autoroles** are automatically given to the member as soon as they join the Discord server.
 
 ## Welcome Channel
 
 The **Welcome Channel** is where welcome messages are sent.
+<Note>
+    The message that is sent to this channel can be customized by pressing **Edit configuration...** -> **Edit Welcome Message**.
+</Note>
 
-## Welcome Message
+## Autodelete Delay
 
-The **Welcome Message** is what is sent when a member joins the Discord server.
+The **Autodelete Delay** is the amount of time before the welcome message is automatically deleted.
+
+## DM Member
+
+The **DM Member** toggle determines whether or not a message is sent to the member via DMs when they join the Discord server.
+<Note>
+    The message sent via DM can be customized by pressing **Edit configuration...** -> **Edit DM Welcome Message**.
+</Note>
+
+## Joingate Threshold
+
+The **Joingate Threshold** is the minimum account age that a member's Discord account must be in order to join the server. Members with accounts younger than this threshold will be automatically kicked upon joining the server.
