--- a/overview/welcome.mdx
+++ b/overview/welcome.mdx
@@ -1,17 +1,11 @@
 ---
 title: "Welcome to Ducky"
 description: "Power your server with Ducky, a multipurpose bot focused on seamlessly integrating Discord and ERLC server automation for effortless management."
-tag: "UPDATED"
 ---
 
 ![Ducky](https://duckybot.xyz/images/banners/footers/Ducky.png)
 
-## About
+## About Ducky
+**Ducky** is a multipurpose bot focused on seamlessly integrating Discord and ERLC server automation for effortless management developed by [Troptop](https://discord.com/users/598958193032560642) and [bobbibones](https://discord.com/users/782235114858872854) with [Quackscordia](https://github.com/DuckySupport/Quackscordia), a fork of [Discordia](https://github.com/SinisterRectus/Discordia), the Discord API wrapper for **Lua**.
 
-**Ducky** is a flexible bot that connects Discord with ER:LC server automation. It helps server owners and community managers manage their servers easily. Developed by [**Troptop**](https://discord.com/users/598958193032560642) and [**bobbibones**](https://discord.com/users/782235114858872854), Ducky operates on [**Quackscordia**](https://github.com/DuckySupport/Quackscordia), which is a modified version of [**Discordia**](https://github.com/SinisterRectus/Discordia), the Discord API wrapper for **Lua**. This strong base ensures smooth communication between Discord and your ER:LC server. It allows for automated moderation, role synchronization, live server tracking, and customizable features that improve both performance and user experience. 
-
-Whether you run a small community or a large server network, Ducky provides tools to make managing it efficient and enjoyable. It simplifies complex tasks into straightforward commands. If you find a bug, need help, want to propose a new feature, or simply wish to stay updated, [**Ducky's Pond**](https://discord.gg/w2dNr7vuKP) is the right place for you. There, you can talk to the developers, preview upcoming features, check the bot’s live status, read update logs, and join a growing community of users focused on enhancing Ducky’s capabilities.
-
-<Warning>
-  Ducky currently does not have a publically available Dashboard. To setup most features, you need to use the **`/setup`** command.
-</Warning>
+If you find a bug, need support, would like to suggest a feature, want to keep up with updates, check out leaks of upcoming updates, view the bot's status, and more, hop into [Ducky's Pond](https://discord.gg/w2dNr7vuKP).
