--- a/overview/changelogs.mdx
+++ b/overview/changelogs.mdx
@@ -122,5 +122,7 @@ As of v1.6.0 Stable, we're moving our detailed changelogs from Discord to our do
 
     Phew, that took a long time to write. If you need support, would like to make a suggestion, or report a bug, hop into [**Ducky's Pond**](https://duckybot.xyz/support).
     
+    We plan to continue our monthly updates throughout 2026, and we apologize for the lack of an update in December due to the holidays.
+    
     We truly hope you enjoy this update, and as always, *thank you* for choosing **Ducky** to power your server.
 </Update>
