--- a/misc/timeinputs.mdx
+++ b/misc/timeinputs.mdx
@@ -1,23 +1,23 @@
 ---
 title: "Time Inputs"
 description: "Learn how to input time/intervals."
-tag: "NEW"
 ---
 
 Whenever you're asked to input an **interval** or amount of **time**, you might realize that if you input **12 hours**, it'll become **12 seconds**. That's due to the way Ducky, and many other bots, read time inputs. Instead, you input the number, followed by the letter corresponding to the type of time.
 
-- **Seconds:** `s`
-- **Minutes:** `m`
-- **Hours:** `h`
-- **Days:** `d`
-- **Weeks:** `w`
-- **Years:** `y`
+- **Seconds:** **`s`**
+- **Minutes:** **`m`**
+- **Hours:** **`h`**
+- **Days:** **`d`**
+- **Weeks:** **`w`**
+- **Years:** **`y`**
 
-<Tip>
-    **Examples:**
-    - 15 seconds -> `15s`
-    - 30 minutes -> `30m`
-    - 12 hours -> `12h`
-    - 6 hours, 30 minutes -> `6h30m`
-    - 2 weeks -> `2w`
-</Tip>
+<Note>
+  **Examples:**
+
+  - 15 seconds -\> **`15s`**
+  - 30 minutes -\> **`30m`**
+  - 12 hours -\> **`12h`**
+  - 6 hours, 30 minutes -\> **`6h30m`**
+  - 2 weeks -\> **`2w`**
+</Note>
