--- a/modules/erlcstatus.mdx
+++ b/modules/erlcstatus.mdx
@@ -6,22 +6,25 @@ tag: "UNPOLISHED"
 
 This page provides the essential configuration options for Ducky's **ERLC Server Status** module, which allows you to display live server statistics directly in your Discord server. The module creates a centralized system for monitoring server activity, ensuring key metrics are always visible and up to date. To enable and configure this module, use the **`/setup`** command and navigate to the **ERLC Server Status** page.
 
-<Steps>
-  <Step title="Server Status Message" titleSize="h2">
-    <Steps>
-      <Step title="Channel" icon="hashtag" titleSize="h3">
-        The **Channel** is a configurable setting in the **`/setup`** page, this is where your **ERLC Server Status Message** will be sent.
-      </Step>
-      <Step title="Link" icon="link" titleSize="h3">
-        The **Link** option is a non-configurable option which just displays a quick-link to your **ERLC Server Status Message**.
-      </Step>
-      <Step title="Content" icon="message-dots" titleSize="h3">
-        The **Content** setting is where you configure how you want your **ERLC Server Status Message** to look like. You are able to configure the embed and message to your liking.
-      </Step>
-    </Steps>
-  </Step>
-  <Step title="Server Status Channels" titleSize="h2">
-    With Ducky's **ERLC Server Status** module you are able to configure a variety of status channels to display various types of statistics.\
-    To create a status channel, naviage to the **ERLC Server Status** page using the **`/setup`** command and use the dropdown menu and select "Create Server Status Channel". Then you are able to create **3** Server Status Channels, or **6** if you have **Ducky Plus\+**. Then using the variables found using the dropdown menu you can make your Server Status Channels display whatever you want\!
-  </Step>
-</Steps>
+<Callout icon="/icons/duckyplus.png" color="#d706eb">
+  Ducky provides 3 ER:LC server status channels for free users. Upgrade to Ducky Plus+ to receive 6 ER:LC server status channels.
+</Callout>
+
+## Server Status Message
+
+### Channel
+
+The **Channel** is a configurable setting in the **`/setup`** page, this is where your **ERLC Server Status Message** will be sent.
+
+### Link
+
+The **Link** option is a non-configurable option which just displays a quick-link to your **ERLC Server Status Message**.
+
+### Content
+
+The **Content** setting is where you configure how you want your **ERLC Server Status Message** to look like. You are able to configure the embed and message to your liking.
+
+## Server Status Channels
+
+With Ducky's **ERLC Server Status** module you are able to configure a variety of status channels to display various types of statistics.\
+To create a status channel, naviage to the **ERLC Server Status** page using the **`/setup`** command and use the dropdown menu and select "Create Server Status Channel". Then you are able to create **3** Server Status Channels, or **6** if you have **Ducky Plus+**. Then using the variables found using the dropdown menu you can make your Server Status Channels display whatever you want!
