--- a/overview/changelogs.mdx
+++ b/overview/changelogs.mdx
@@ -27,6 +27,12 @@ As of v1.6.0 Stable, we're moving our detailed changelogs from Discord to our do
         The member must also have their Roblox account linked to Ducky in order to track playtime.
     </Warning>
 
+    ### Components Editor
+    - Our new **Components Editor** is now available via the **`/message`** command.
+    - The **Components Editor** allows you to add buttons, dropdowns, and more with message responses determined by exportables.
+    - This was a very highly-requested feature by the community, and we're excited to finally bring it to you.
+    - You'll soon be able to use this in other places such as welcome messages in a future update.
+
     ### Improved Builders
     - We've started using **Modals v2** for our builders. This update marks the start of this transition, so keep in mind that not all builders are completely transferred to Modals v2.
     - Modals v2 offers many clean and useful components such as option, role, and channel dropdowns, text inputs, checkboxes (soon...), and more.
