--- a/overview/changelogs.mdx
+++ b/overview/changelogs.mdx
@@ -4,7 +4,7 @@ description: "Check out what's new in our recent updates."
 tag: "NEW"
 ---
 
-As of v1.6.0 Stable, we're moving our detailed changelogs from Discord to our documentation page for better formatting and a much larger character limit.
+As of v1.6.0 Stable, we're moving our detailed changelogs from Discord to our documentation for better formatting and a much larger character limit.
 
 <Update label="v1.6.0 Stable" description="January 31, 2026">
     **The first update of 2026 is here!** We've been working on v1.6.0 Stable for a while now, and after weeks of testing, development, and even more testing, it's finally ready.
@@ -38,6 +38,10 @@ As of v1.6.0 Stable, we're moving our detailed changelogs from Discord to our do
     - Modals v2 offers many clean and useful components such as option, role, and channel dropdowns, text inputs, checkboxes (soon...), and more.
     - We're also using better labels for the different options. For example, instead of asking the user for **Required Role**, it asks, **What role should be required to use this shift type?**
     - The transition can already be found in places such as the **Economy**, **Shift Management**, and **ERLC Integration** pages of **`/setup`**.
+
+    ### On-Shift Nickname Prefix
+    - You can now add an on-shift nickname prefix that will automatically be appended to member's nicknames when they go on-shift.
+    - This can be edited via the **Shift Type Builder** on the **`/setup`** -> **Shift Management** page.
 
     ### Coinflip and Reminders
     - The new **`/coinflip`** command lets you flip a coin and determine heads or tails.
@@ -126,7 +130,7 @@ As of v1.6.0 Stable, we're moving our detailed changelogs from Discord to our do
     - Resolved issues with editing/removing Autoreact Channels if more than one autoreaction was added to the same channel
     - Resolved issues with department nicknames being synced unidirectionally
 
-    Phew, that took a long time to write. If you need support, would like to make a suggestion, or report a bug, hop into [**Ducky's Pond**](https://duckybot.xyz/support).
+    Phew... that took quite a long time to write. If you need support, would like to make a suggestion, or report a bug, hop into [**Ducky's Pond**](https://duckybot.xyz/support).
     
     We plan to continue our monthly updates throughout 2026, and we apologize for the lack of an update in December due to the holidays.
     
