some more docs polishing, ICONS!

--- a/configuration/setup.mdx
+++ b/configuration/setup.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Configuring Ducky"
 description: "Learn how to configure Ducky."
+icon: "gear"
+iconType: "solid"
 ---
 
 This page provides the essential configuration options to help you get started quickly, including setting your command prefix, managing disabled commands, changing permission roles (see [Permissions](/configuration/permissions)), configuring a configuration log channel, and resetting your configuration. Once you have invited Ducky to your server, use the **`/setup`** command to get started.
