--- a/guides/linkerlc.mdx
+++ b/guides/linkerlc.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Linking your ERLC Private Server"
 description: "Learn how to link your ERLC private server properly, allowing you to manage, monitor, and automate it remotely."
+icon: "link"
+iconType: "solid"
 ---
 
 <Warning>
@@ -22,7 +24,3 @@ description: "Learn how to link your ERLC private server properly, allowing you 
     You have now successfully linked your ERLC private server to Ducky.
   </Step>
 </Steps>
-
-<Warning>
-  If your API key does not seem to work, reset it within ERLC and re-enter it. If you have any problems, feel free to open a support thread in [**Ducky's Pond**](https://discord.gg/vUHzCTNetw)**.**
-</Warning>
