--- a/misc/embededitor.mdx
+++ b/misc/embededitor.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Embed Editor"
 description: "Learn how to create embeds using the Embed Editor."
+icon: "palette"
+iconType: "solid"
 ---
 
 The **Embed Editor** is found throughout many of Ducky's customizable options. It allows you to fully customize embeds, including their title, description, author, footer, fields, color, thumbnail, and image.
