--- a/modules/activity.mdx
+++ b/modules/activity.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Activity Management"
 description: "Learn about Ducky's Activity Management module and how to configure it."
+icon: "chart-simple"
+iconType: "solid"
 ---
 
 This page provides the essential configuration options for Ducky's **Activity Management** module, which provides an easy way to manage and track your staff's activity with LOAs and activity waves. To enable and configure this module, use the **`/setup`** command and navigate to the **Activity Management** page.
