--- a/modules/welcome.mdx
+++ b/modules/welcome.mdx
@@ -1,9 +1,11 @@
 ---
-title: "Welcome/AutoRoles"
-description: "Learn about Ducky's Welcome/AutoRoles module and how to configure it."
+title: "Welcome/Autoroles"
+description: "Learn about Ducky's Welcome/Autoroles module and how to configure it."
+icon: "hand-wave"
+iconType: "solid"
 ---
 
-This page provides the essential configuration options for Ducky's **Welcome/AutoRoles** module, which allows you to greet new members and automatically assign roles. To enable and configure this module, use the **`/setup`** command and navigate to the **Welcome/AutoRoles** page.
+This page provides the essential configuration options for Ducky's **Welcome/Autoroles** module, which allows you to greet new members and automatically assign roles. To enable and configure this module, use the **`/setup`** command and navigate to the **Welcome/Autoroles** page.
 
 ## Autoroles
 
