--- a/overview/changelogs.mdx
+++ b/overview/changelogs.mdx
@@ -2,6 +2,8 @@
 title: "Changelogs"
 description: "Check out what's new in our recent updates."
 tag: "NEW"
+icon: "sparkles"
+iconType: "solid"
 ---
 
 As of v1.6.0 Stable, we're moving our detailed changelogs from Discord to our documentation for better formatting and a much larger character limit.
