--- a/configuration/permissions.mdx
+++ b/configuration/permissions.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Permissions"
 description: "Learn what each role-based permission level can access via Ducky."
+icon: "shield"
+iconType: "solid"
 ---
 
 Ducky's role-based permissions can be configured via the first page of the **`/setup`** command. More information on what each of these role-based permissions are authorized to access can be found below.
