--- a/overview/welcome.mdx
+++ b/overview/welcome.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Welcome to Ducky"
 description: "Power your server with Ducky, a multipurpose bot focused on seamlessly integrating Discord and ERLC server automation for effortless management."
+icon: "hand-wave"
+iconType: "solid"
 ---
 
 ![Ducky](https://duckybot.xyz/images/banners/footers/Ducky.png)
